Style scrolled popup scrollbar, fixes #124

--- a/theme/outerspatial.css
+++ b/theme/outerspatial.css
@@ -785,6 +785,22 @@
   border-top: none;
   padding-right: 15px;
 }
+.outerspatial .leaflet-popup-scrolled::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 15px;
+}
+.outerspatial .leaflet-popup-scrolled::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-left: 1px solid #e3dfd8;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.outerspatial .leaflet-popup-scrolled::-webkit-scrollbar-thumb {
+  background: #6c6d70;
+  border-radius: 7px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
 .outerspatial .leaflet-popup-scrolled .layer {
   width: inherit;
 }
